# ndl-core-client

./: .gitignore  README.md  demo.ipynb  mcp.json  pyproject.toml
docs/: mcp.md
src/ndl_core_client/: __init__.py  client.py  models.py
src/ndl_core_client/agent/: __init__.py  mcp_server.py  tools.py
