[project]
name = "ndl-core-client"
version = "0.1.0"
description = "A Python library to easily search and download datasets from the NDL Core Corpus"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
ndl-core-mcp = "ndl_core_client.agent.mcp_server:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
